# Security-Robot-Final-Project

./: gmap.sh  gmap_sim.sh  move.sh  move_sim.sh  person_stopping.sh  run.sh  simple_goals.sh  start_sim.sh  voice_control.sh  zbarcam
baidu_speech/src/: simple_speek.py
dialogflow_ros/src/dialogflow_ros/: dialogflow_node.py
gmap_data/: CMakeLists.txt  firstlabmap.yaml  mymapdata.yaml  mysecondlab.yaml  mysecondlabf.yaml  mysecondmap.yaml  package.xml
gspeech/: CMakeLists.txt  gspeech.py  package.xml
location_monitor/: CMakeLists.txt  package.xml
my_gazebo_2dnav/: CMakeLists.txt  amcl_diff.launch  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base.launch  package.xml
person/: CMakeLists.txt  package.xml  person.py  recognition.py
pioneer_2dnav/: CMakeLists.txt  amcl_diff.launch  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base.launch  package.xml  pioneer3dx.rviz  pioneer_config.launch
robo_sim/: package.xml
robo_sim/launch/: pioneer3dx.gazebo.launch  pioneer3dx.rviz  s.launch  start.launch
robo_sim/world/: empty  empty_world.launch  house_test.sdf  room.launch  test_c.world  test_house.world
rosaria/: CMakeLists.txt  transform.cpp
simple_navigation_goals/: package.xml
simple_navigation_goals/src/: simple_navigation_goals.cpp
teleop_twist_joy/launch/: teleop.launch
teleop_twist_keyboard/: teleop_twist_keyboard.py
zbar_cam/: CMakeLists.txt  package.xml  zbar.py  zbar_cam.py
(+3 files in other folders)
